syntax = "proto3";

package orderService;

option go_package = "./;orderService";


message ShopItem {
  string ID = 1;
  string Title = 2;
  string Description = 3;
  uint64 Quantity = 4;
  double Price = 5;
}

message Order {
  string ID = 1;
  repeated ShopItem ShopItems = 2;
  bool Created = 3;
  bool Paid = 4;
  bool Submitted = 5;
  bool Delivering = 6;
  bool Delivered = 7;
  bool Canceled = 8;
  double TotalPrice = 9;
  string AccountEmail = 10;
}

message CreateOrderReq {
  string AccountEmail = 1;
  repeated ShopItem ShopItems = 2;
}

message CreateOrderRes {
  string AggregateID = 1;
}

message PayOrderReq {
  string AggregateID = 1;
}

message PayOrderRes {
  string AggregateID = 1;
}

message SubmitOrderReq {
  string AggregateID = 1;
}

message SubmitOrderRes {
  string AggregateID = 1;
}

message GetOrderByIDReq {
  string AggregateID = 1;
}

message GetOrderByIDRes {
  Order Order = 1;
}

message UpdateOrderReq {
  string AggregateID = 1;
  repeated ShopItem ShopItems = 2;
}

message UpdateOrderRes {}

message SearchReq {
  string SearchText = 1;
  int64 Page = 2;
  int64 Size = 3;
}

message SearchRes {
  Pagination Pagination = 1;
  repeated Order Orders = 2;
}

message Pagination {
  int64 TotalCount = 1;
  int64 TotalPages = 2;
  int64 Page = 3;
  int64 Size = 4;
  bool HasMore = 5;
}

service orderService {
  rpc CreateOrder(CreateOrderReq) returns (CreateOrderRes);
  rpc PayOrder(PayOrderReq) returns (PayOrderRes);
  rpc SubmitOrder(SubmitOrderReq) returns (SubmitOrderRes);
  rpc GetOrderByID(GetOrderByIDReq) returns (GetOrderByIDRes);
  rpc UpdateOrder(UpdateOrderReq) returns (UpdateOrderRes);
  rpc Search(SearchReq) returns (SearchRes);
}